--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Password is {{password}}
-</body>
-</html>
+{% extends 'generator\base.html' %}
+
+{%block bodyblock %}
+    <h2>Password is :</h2> 
+    <h2 class="alert alert-success">{{password}}</h2>
+    <br>
+    <a href="{%url 'home'%}" class="btn btn-warning">Go Back</a>
+    {% endblock  %}
